# Serious-Engine

./: .gitignore
Sources/: CMakeLists.txt
Sources/DecodeReport/: CMakeLists.txt  StdAfx.cpp
Sources/DedicatedServer/: CMakeLists.txt  DedicatedServer.cpp
Sources/Depend/: CMakeLists.txt  StdH.h
Sources/Ecc/: CMakeLists.txt  Main.cpp  Scanner.cpp  unistd.h
Sources/Engine/: CMakeLists.txt  Engine.cpp  Engine.h  StdH.h
Sources/Engine/Base/: Anim.cpp  CTString.cpp  Console.cpp  Directory.cpp  ErrorReporting.cpp  FileName.cpp  FileName.h  IFeel.cpp  Input.cpp  Memory.cpp  ParsingSymbols.h  Profiling.cpp  ReplaceFile.cpp  Serial.cpp  Shell.cpp  StackDump.cpp  Stream.cpp  Stream.h  Timer.cpp  Translation.cpp  Types.h  Unzip.cpp
Sources/Engine/Brushes/: BrushArchive.cpp  BrushIO.cpp  BrushMip.cpp  BrushSector.cpp  BrushShadows.cpp
Sources/Engine/Classes/: PlayerEntity.es
Sources/Engine/Entities/: Entity.cpp  Entity.h  EntityClass.cpp  EntityCopying.cpp  EntityProperties.cpp  EntityProperties.h  FieldBSPTesting.cpp  PlayerCharacter.cpp
Sources/Engine/Graphics/: Adapter.cpp  Benchmark.cpp  Color.cpp  Color.h  DepthCheck.cpp  DisplayMode.cpp  DrawPort_Particles.cpp  DrawPort_RenderScene.cpp  Font.cpp  GfxLibrary.cpp  GfxLibrary.h  Gfx_Direct3D.cpp  Gfx_Direct3D_Textures.cpp  Gfx_OpenGL.cpp  Gfx_OpenGL_Textures.cpp  Gfx_wrapper.cpp  Gfx_wrapper.h  Graphics.cpp  ImageInfo.cpp  MultiMonitor.cpp  Shader.cpp  ShadowMap.cpp  Stereo.cpp  Texture.cpp  TextureEffects.cpp  TextureRender.cpp  ViewPort.cpp
Sources/Engine/Light/: LayerMaker.cpp  LayerMixer.cpp
Sources/Engine/Math/: Float.cpp  Matrix.h  Object3D_CSG.cpp  Object3D_IO.cpp  ObjectSector.cpp  Projection_Simple.cpp  Quaternion.h  Vector.h
Sources/Engine/Models/: EditModel.cpp  Model.cpp  RenderModel.cpp  RenderModel_View.cpp
Sources/Engine/Network/: Buffer.cpp  ClientInterface.cpp  CommunicationInterface.cpp  CommunicationInterface.h  Compression.cpp  MessageDispatcher.cpp  Network.cpp  NetworkMessage.cpp  Packet.cpp  PlayerSource.cpp  PlayerTarget.cpp  Server.cpp  SessionState.cpp
Sources/Engine/Rendering/: Render.cpp
Sources/Engine/Ska/: Mesh.cpp  ModelInstance.cpp  RMRender.cpp  Skeleton.cpp
Sources/Engine/Sound/: SoundData.cpp  SoundDecoder.cpp  SoundLibrary.cpp  SoundMixer.cpp  SoundObject.cpp  Wave.cpp
Sources/Engine/Templates/: BSP.cpp  HashTableTemplate.cpp  Selection.cpp  StaticArray.cpp  StaticArray.h  StaticStackArray.cpp
Sources/Engine/Terrain/: Terrain.cpp  Terrain.h  TerrainArchive.cpp  TerrainEditing.cpp  TerrainMisc.cpp  TerrainRayCasting.cpp  TerrainRender.cpp  TerrainTile.cpp
Sources/Engine/World/: World.cpp  WorldCSG.cpp  WorldIO.cpp
Sources/EngineGui/: CMakeLists.txt  FileRequester.cpp
Sources/EntitiesMP/: AirElemental.es  AmmoItem.es  AmmoPack.es  AnimationChanger.es  AnimationHub.es  ArmorItem.es  BackgroundViewer.es  BasicEffects.es  Beast.es  Boneman.es  Camera.es  CameraMarker.es  CannonRotating.es  CannonStatic.es  ChainsawFreak.es  Copier.es  CreditsHolder.es  Debris.es  Demon.es  DestroyableArchitecture.es  Devil.es  DevilMarker.es  DoorController.es  Dragonman.es  EffectMarker.es  Elemental.es  EnemyBase.es  EnemyMarker.es  EnemySpawner.es  EnvironmentBase.es  EnvironmentMarker.es  EnvironmentParticlesHolder.es  ExotechLarva.es  ExotechLarvaCharger.es  Eyeman.es  Fireworks.es  Fish.es  Gizmo.es  GravityRouter.es  Grunt.es  (+45 more)
Sources/EntitiesMP/Common/: Common.cpp
Sources/GameGUIMP/: CMakeLists.txt
Sources/GameMP/: CMakeLists.txt  CompMessage.cpp  Computer.cpp  Controls.cpp  Game.cpp  Game.h  Map.cpp
Sources/LWSkaExporter/: CMakeLists.txt  CopyWeightMaps.cpp
Sources/MakeFONT/: CMakeLists.txt
Sources/Modeler/: CMakeLists.txt  MainFrm.cpp  StainsComboBox.cpp
Sources/RCon/: CMakeLists.txt  RCon.cpp  StdAfx.cpp
Sources/SeriousSam/: CDCheck.h  CMakeLists.txt  CmdLine.cpp  Credits.cpp  GLSettings.cpp  LevelInfo.cpp  Menu.cpp  MenuGadgets.cpp  MenuPrinting.cpp  SeriousSam.cpp  SplashScreen.cpp  StdH.cpp  StdH.h
Sources/SeriousSkaStudio/: CMakeLists.txt  SplitterFrame.cpp
Sources/Shaders/: CMakeLists.txt  StdH.cpp
Sources/WorldEditor/: CMakeLists.txt  DlgCreateVirtualDirectory.cpp
