CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (DecodeSupport)

FILE(GLOB_RECURSE DECODESUPPORT_INCLUDES "*.h")
FILE(GLOB_RECURSE DECODESUPPORT_SOURCES "*.cpp")

INCLUDE_DIRECTORIES ("${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_SOURCE_DIR}")
ADD_LIBRARY (DecodeSupport "STATIC" ${DECODESUPPORT_SOURCES} ${DECODESUPPORT_INCLUDES})
