CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(LWSkaExporter)

FILE(GLOB_RECURSE LWSKAEXPORTER_INCLUDES "*.h")
FILE(GLOB_RECURSE LWSKAEXPORTER_SOURCES_CPP "*.cpp")
FILE(GLOB_RECURSE LWSKAEXPORTER_SOURCES_C "*.c")

INCLUDE_DIRECTORIES ("../" "SDK/")
ADD_EXECUTABLE (LWSkaExporter ${LWSKAEXPORTER_SOURCES} ${LWSKAEXPORTER_SOURCES_C} ${LWSKAEXPORTER_INCLUDES})