CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(SeriousSkaStudio)

FILE(GLOB_RECURSE SERIOUSSKASTUDIO_INCLUDES "*.h")
FILE(GLOB_RECURSE SERIOUSSKASTUDIO_SOURCES "*.cpp")

INCLUDE_DIRECTORIES ("${CMAKE_SOURCE_DIR}")
ADD_EXECUTABLE (SeriousSkaStudio ${SERIOUSSKASTUDIO_SOURCES} ${SERIOUSSKASTUDIO_INCLUDES})